workload/apps/monitoring/kube-prometheus-stack/templates/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-specific-kube-prometheus-stack
  namespace: kube-prometheus-stack
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-prometheus-stack
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: grafana
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: haproxy-controller
      ports:
        - protocol: TCP
          port: 9090
    - from:
        - ipBlock:
            cidr: 192.168.0.0/16
        - ipBlock:
            cidr: 10.0.0.0/22
      ports:
        - protocol: TCP
          port: 15008
        - protocol: TCP
          port: 9443
        - protocol: TCP
          port: 8443
        - protocol: TCP
          port: 9100
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.0.0/16
        - ipBlock:
            cidr: 10.0.0.0/22
